Adicionado tempo para transição de efeito máquina de escrever

--- a/estilo.css
+++ b/estilo.css
@@ -115,6 +115,10 @@ nav ul li a:hover {
     transition: all .5s ease-in-out;
 }
 
+#subtitle{
+    transition: all .5s ease-in-out;
+}
+
 @media (max-width:430px) {
     nav {
         font-size: .9em;
