--- a/estilo.css
+++ b/estilo.css
@@ -134,25 +134,25 @@ nav ul li a:hover {
     padding-bottom: 15px;
 }
 
-#about p{
+#about p {
     width: 90%;
     margin: auto;
     text-align: justify;
     padding-bottom: 40px;
 }
 
-#services{
+#services {
     background: #ec0000;
     color: rgb(235, 255, 54);
 }
 
-#services h1{
+#services h1 {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 15px;
 }
 
-.cards{
+.cards {
     width: 90%;
     margin: auto;
     display: flex;
@@ -161,46 +161,96 @@ nav ul li a:hover {
     justify-content: center;
 }
 
-.card{
+.card {
     background: #fff;
     color: #000;
     padding: 15px;
     border-radius: 5px;
-    box-shadow: 0 2px 2px 1px rgba(235, 255, 54,0.6);
+    box-shadow: 0 2px 2px 1px rgba(235, 255, 54, 0.6);
 }
 
-@media (max-width:940px){
-    .container{
+#skills {
+    background: #0a0a0a;
+    color: #fff;
+}
+
+#skills h1 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+
+.bean-skills {
+    width: 50%;
+    margin: auto;
+    padding-bottom: 150px;
+}
+
+ul.bean-skillset {
+    list-style: none;
+    float: left;
+    width: 100%;
+}
+
+.skill-percent {
+    float: right;
+}
+
+li.skill-bar {
+    background-color: #7BC673;
+    color: #FFF;
+    font: bold 12px/23px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+    margin-bottom: 3px;
+    padding: 2px 8px;
+    width: 300px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
+}
+
+@media (max-width:940px) {
+    .container {
         padding-top: 60px;
     }
-    .textcontent h1{
+
+    .textcontent h1 {
         font-size: 2em;
     }
-    .imagem img{
+
+    .imagem img {
         width: 300px;
     }
-    header{
+
+    header {
         height: 90vh;
     }
 }
 
-@media (max-width:750px){
-    .textcontent h1{
+@media (max-width:750px) {
+    .textcontent h1 {
         font-size: 2em;
     }
 }
 
-@media (max-width:660px){
-    .textcontent h1, .textcontent h2{
+@media (max-width:660px) {
+
+    .textcontent h1,
+    .textcontent h2 {
         font-size: 1.3em;
     }
+
     .container ul li a ion-icon {
         font-size: 15px;
     }
-    .imagem img{
+
+    .imagem img {
         width: 200px;
     }
-    header{
+
+    header {
         height: 100vh;
     }
 }
@@ -278,8 +328,8 @@ nav ul li a:hover {
     }
 }
 
-@media (max-width:300px){
-    .textcontent h1{
+@media (max-width:300px) {
+    .textcontent h1 {
         font-size: 1.3em;
     }
 }
