--- a/estilo.css
+++ b/estilo.css
@@ -211,6 +211,50 @@ li.skill-bar {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
+#projetos{
+    background: #ec0000;
+    color: rgb(235, 255, 54);
+}
+
+#projetos h1{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+
+#contact{
+    background: #0a0a0a;
+    color: #fff;
+}
+
+#contact h1{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 15px;
+}
+
+#contact p{
+    text-align: center;
+}
+
+#contact p a{
+    text-decoration: none;
+    color: #fff;
+    font-size: .8em;
+    font-weight: bold;
+}
+
+#contact p span{
+    font-size: 1em;
+}
+
+.cv{
+    background: #ec0000;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 @media (max-width:940px) {
     .container {
         padding-top: 60px;
